<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2022-2023 Andre_601
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>parent</artifactId>
        <groupId>ch.andre601.advancedserverlist</groupId>
        <version>parent</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>core</artifactId>
    <packaging>jar</packaging>
    <version>${plugin.version}</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <plugin.config.version>8</plugin.config.version>
    </properties>
    
    <repositories>
        <repository>
            <id>flexver-repo</id>
            <url>https://repo.sleeping.town/</url>
        </repository>
        <repository>
            <id>papiproxybridge-repo</id>
            <url>https://repo.william278.net/releases/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>codeberg</id>
            <url>https://codeberg.org/api/packages/Andre601/maven/</url>
        </repository>
        <repository>
            <id>codemc</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
    </repositories>
    
    <dependencies>
        <dependency>
            <groupId>ch.andre601.asl-api</groupId>
            <artifactId>api</artifactId>
            <version>${api.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ch.andre601</groupId>
            <artifactId>expressionparser</artifactId>
            <version>1.6.0</version>
            <scope>compile</scope>
        </dependency>
        
        <!-- Configuration -->
        <dependency>
            <groupId>org.spongepowered</groupId>
            <artifactId>configurate-yaml</artifactId>
            <version>${dependency.configurate-yaml}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spongepowered</groupId>
            <artifactId>configurate-hocon</artifactId>
            <version>4.2.0</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- MiniMessage -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>${dependency.adventure-api}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>${dependency.adventure-text-minimessage}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-legacy</artifactId>
            <version>${dependency.adventure-text-serializer-legacy}</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- Misc -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.unascribed</groupId>
            <artifactId>flexver-java</artifactId>
            <version>1.1.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.4.8-jre</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- Command Framework -->
        <dependency>
            <groupId>org.incendo</groupId>
            <artifactId>cloud-annotations</artifactId>
            <version>${dependency.cloud-annotations}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.incendo</groupId>
            <artifactId>cloud-minecraft-extras</artifactId>
            <version>${dependency.cloud-minecraft-extras}</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>net.kyori</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <!-- Annotations -->
        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
            <version>1.0.0</version>
        </dependency>
        
        <!-- Plugins -->
        <dependency>
            <groupId>net.william278</groupId>
            <artifactId>papiproxybridge</artifactId>
            <version>1.8.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>eu.kennytv.maintenance</groupId>
            <artifactId>maintenance-api</artifactId>
            <version>4.2.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.minecrell</groupId>
            <artifactId>ServerListPlus</artifactId>
            <version>3.5.0</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.13.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>AdvancedServerList-Core-${plugin.version}${project.build.build_id}</finalName>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>${project.basedir}/src/main/resources</directory>
                <excludes>
                    <exclude>char-widths.json.gz</exclude>
                </excludes>
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>${project.basedir}/src/main/resources</directory>
                <includes>
                    <include>char-widths.json.gz</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>